VISTA-403 Fixing table alignment

--- a/vista-pmsite/vista-pmsite-server/src/main/resources/templates/main0.css
+++ b/vista-pmsite/vista-pmsite-server/src/main/resources/templates/main0.css
@@ -13,7 +13,6 @@ body,h1,h2,h3,h4,h5,h6,dl,dt,dd,p {
 
 table {
 	border-collapse: collapse;
-	width: 100%;
 }
 
 q {
